--- a/DeploymentLinux.ipynb
+++ b/DeploymentLinux.ipynb
@@ -175,7 +175,7 @@
     "\n",
     "<p>restart apache server</p>\n",
     "\n",
-    "<code>sudo service apache2 restart</code>"
+    "<code>sudo service apache2 restart</code>\n"
    ],
    "id": "e5b2b8c285f02daa"
   }
