--- a/DeploymentLinux.ipynb
+++ b/DeploymentLinux.ipynb
@@ -4,6 +4,20 @@
    "metadata": {},
    "cell_type": "markdown",
    "source": [
+    "<h3>Add User</h3>\n",
+    "\n",
+    "<code>adduser kshyst</code>\n",
+    "\n",
+    "<p>add user to sudo group</p>\n",
+    "<code>adduser kshyst sudo</code>\n",
+    "\n"
+   ],
+   "id": "8e62cfeeae5077ef"
+  },
+  {
+   "metadata": {},
+   "cell_type": "markdown",
+   "source": [
     "<h3>change host setting</h3>\n",
     "\n",
     "<code>hostnamectl set-hostname nigger</code>\n",
@@ -31,7 +45,10 @@
    "metadata": {},
    "source": [
     "<h3> ssh key location </h3>\n",
-    "<code>~/.ssh"
+    "<code>~/.ssh</code>\n",
+    "\n",
+    "<code>mkdir -p ~/.ssh</code>\n",
+    "\n"
    ]
   },
   {
@@ -162,6 +179,12 @@
     "<code>ls -la</code>"
    ],
    "id": "2ecc731b2cf7dca9"
+  },
+  {
+   "metadata": {},
+   "cell_type": "markdown",
+   "source": "",
+   "id": "ef1cbbc7e59b515f"
   },
   {
    "metadata": {},
