added ssh guide

--- a/DeploymentLinux.ipynb
+++ b/DeploymentLinux.ipynb
@@ -34,9 +34,16 @@
    "source": [
     "<h3>editing ssh configurations</h3>\n",
     "\n",
-    "<code> sudo nano /etc/ssh/sshd_config\n",
+    "<code> sudo nano /etc/ssh/sshd_config</code>\n",
     "<br>\n",
-    "<code> sudo systemctl restart sshd\n"
+    "<code> sudo systemctl restart sshd</code>\n",
+    "<br><br>\n",
+    "<code>\n",
+    "PubkeyAuthentication yes\n",
+    "<br>\n",
+    "AuthorizedKeysFile .ssh/authorized_keys\n",
+    "</code>\n",
+    "\n"
    ]
   },
   {
@@ -48,7 +55,10 @@
     "<code>~/.ssh</code>\n",
     "\n",
     "<code>mkdir -p ~/.ssh</code>\n",
-    "\n"
+    "\n",
+    "<h3>ssh making code</h3>\n",
+    "\n",
+    "<code>ssh-keygen -b 4096</code>\n"
    ]
   },
   {
