full nginx guide version beta

--- a/DeploymentWithNginx.ipynb
+++ b/DeploymentWithNginx.ipynb
@@ -58,6 +58,10 @@
     "    location /static/ {\n",
     "        root /path/to/your/project;\n",
     "    }\n",
+    "    \n",
+    "    location /media/ {\n",
+    "        root /path/to/your/project;\n",
+    "    }\n",
     "\n",
     "    location / {\n",
     "        include proxy_params;\n",
@@ -113,6 +117,96 @@
     "```"
    ],
    "id": "6e00410fbf0eb24f"
+  },
+  {
+   "metadata": {},
+   "cell_type": "markdown",
+   "source": [
+    "<h3>Creating name servers</h3>\n",
+    "\n",
+    "```bash\n",
+    "sudo apt update\n",
+    "sudo apt install bind9 bind9utils bind9-doc\n",
+    "```\n",
+    "\n",
+    "<p>add zone configurations to your domain</p>\n",
+    "```bash\n",
+    "sudo nano /etc/bind/named.conf.local\n",
+    "```\n",
+    "\n",
+    "<pre><code>\n",
+    "zone \"kshyst.ir\" {\n",
+    "    type master;\n",
+    "    file \"/etc/bind/zones/db.kshyst.ir\";\n",
+    "};\n",
+    "\n",
+    "zone \"0.168.192.in-addr.arpa\" {\n",
+    "    type master;\n",
+    "    file \"/etc/bind/zones/db.192.168.0\";\n",
+    "};\n",
+    "\n",
+    "</code></pre>\n",
+    "\n",
+    "<p>Configure BIND</p>\n",
+    "```bash\n",
+    "sudo nano /etc/bind/db.kshyst.ir\n",
+    "```\n",
+    "\n",
+    "<pre><code>\n",
+    "$TTL 86400\n",
+    "@   IN  SOA  ns1.kshyst.ir. admin.kshyst.ir. (\n",
+    "            2024072501 ; Serial\n",
+    "            3600       ; Refresh\n",
+    "            1800       ; Retry\n",
+    "            1209600    ; Expire\n",
+    "            86400 )    ; Minimum TTL\n",
+    ";\n",
+    "@   IN  NS  ns1.kshyst.ir.\n",
+    "@   IN  NS  ns2.kshyst.ir.\n",
+    ";\n",
+    "@   IN  A   <Your Server's IP Address>\n",
+    "ns1 IN  A   <Your First DNS Server's IP Address>\n",
+    "ns2 IN  A   <Your Second DNS Server's IP Address>\n",
+    "\n",
+    "</code></pre>\n",
+    "\n",
+    "<p>remove ns2 incase of 1 ip address</p>\n",
+    "\n",
+    "```bash\n",
+    "sudo nano /etc/bind/zones/db.192.168.0\n",
+    "```\n",
+    "\n",
+    "<pre><code>\n",
+    "$TTL 86400\n",
+    "@   IN  SOA  ns1.kshyst.ir. admin.kshyst.ir. (\n",
+    "            2024072501 ; Serial\n",
+    "            3600       ; Refresh\n",
+    "            1800       ; Retry\n",
+    "            1209600    ; Expire\n",
+    "            86400 )    ; Minimum TTL\n",
+    ";\n",
+    "@   IN  NS  ns1.kshyst.ir.\n",
+    "@   IN  NS  ns2.kshyst.ir.\n",
+    ";\n",
+    "1   IN  PTR kshyst.ir.\n",
+    "\n",
+    "</code></pre>\n",
+    "\n",
+    "<h3>Setup and test</h3>\n",
+    "\n",
+    "```bash\n",
+    "sudo named-checkconf\n",
+    "sudo named-checkzone kshyst.ir /etc/bind/zones/db.kshyst.ir\n",
+    "\n",
+    "sudo systemctl restart bind9\n",
+    "```\n",
+    "\n",
+    "<p>Verify Setup</p>\n",
+    "```bash\n",
+    "dig @localhost kshyst.ir\n",
+    "```"
+   ],
+   "id": "5fedcb4ba628cdc0"
   }
  ],
  "metadata": {
