ssl guide added

--- a/DeploymentWithNginx.ipynb
+++ b/DeploymentWithNginx.ipynb
@@ -4,6 +4,29 @@
    "metadata": {},
    "cell_type": "markdown",
    "source": [
+    "<h3>Checkings</h3>\n",
+    "\n",
+    "<p>dns lookups</p>\n",
+    "\n",
+    "```bash\n",
+    "nslookup kshyst.ir\n",
+    "dig kshyst.ir\n",
+    "```\n",
+    "\n",
+    "<p>check nginx</p>\n",
+    "\n",
+    "```bash\n",
+    "sudo systemctl status nginx\n",
+    "sudo nginx -t\n",
+    "```\n",
+    "\n"
+   ],
+   "id": "85b5f7b7827a24e3"
+  },
+  {
+   "metadata": {},
+   "cell_type": "markdown",
+   "source": [
     "<h3>Create a Gunicorn Systemd Service File:</h3>\n",
     "\n",
     "\n",
@@ -130,6 +153,7 @@
     "```\n",
     "\n",
     "<p>add zone configurations to your domain</p>\n",
+    "\n",
     "```bash\n",
     "sudo nano /etc/bind/named.conf.local\n",
     "```\n",
@@ -147,9 +171,16 @@
     "\n",
     "</code></pre>\n",
     "\n",
-    "<p>Configure BIND</p>\n",
+    "<p>Create the zones folder</p>\n",
+    "\n",
     "```bash\n",
-    "sudo nano /etc/bind/db.kshyst.ir\n",
+    "sudo mkdir /etc/bind/db.kshyst.ir\n",
+    "```\n",
+    "\n",
+    "<p>Configure BIND</p>\n",
+    "\n",
+    "```bash\n",
+    "sudo nano /etc/bind/zones/db.kshyst.ir\n",
     "```\n",
     "\n",
     "<pre><code>\n",
@@ -202,11 +233,138 @@
     "```\n",
     "\n",
     "<p>Verify Setup</p>\n",
+    "\n",
     "```bash\n",
     "dig @localhost kshyst.ir\n",
-    "```"
+    "```\n",
+    "\n",
+    "<p>remember to add the new domain to allowed hosts in settings.py</p>"
    ],
    "id": "5fedcb4ba628cdc0"
+  },
+  {
+   "metadata": {},
+   "cell_type": "markdown",
+   "source": [
+    "<h3>Add SSL</h3>\n",
+    "\n",
+    "<p>stop nginx</p>\n",
+    "\n",
+    "```bash\n",
+    "sudo systemctl stop nginx\n",
+    "```\n",
+    "\n",
+    "<p>get cloudflare api token</p>\n",
+    "<pre>\n",
+    "Go to the Cloudflare dashboard.\n",
+    "Navigate to \"My Profile\" -> \"API Tokens\".\n",
+    "Create a new API token with the \"Zone:DNS\n",
+    "\" permission for the specific zone (domain) kshyst.ir.\n",
+    "</pre>\n",
+    "\n",
+    "<p>install cerbot</p>\n",
+    "\n",
+    "```bash\n",
+    "sudo apt update\n",
+    "sudo apt install certbot python3-certbot-nginx\n",
+    "sudo apt-get install python3-certbot-dns-cloudflare\n",
+    "```\n",
+    "\n",
+    "<p>create cloudflare credentials</p>\n",
+    "\n",
+    "```bash\n",
+    "sudo nano /etc/letsencrypt/cloudflare.ini\n",
+    "```\n",
+    "\n",
+    "<code>dns_cloudflare_api_token = YOUR_CLOUDFLARE_API_TOKEN</code>\n",
+    "\n",
+    "```bash\n",
+    "sudo chmod 600 /etc/letsencrypt/cloudflare.ini\n",
+    "```\n",
+    "\n",
+    "<p>run cerbot</p>\n",
+    "\n",
+    "```bash\n",
+    "sudo certbot certonly --dns-cloudflare --dns-cloudflare-credentials /etc/letsencrypt/cloudflare.ini -d kshyst.ir\n",
+    "```\n",
+    "\n",
+    "<p>check if the certificate files are created</p>\n",
+    "\n",
+    "```bash\n",
+    "sudo ls -l /etc/letsencrypt/live/kshyst.ir/\n",
+    "```\n",
+    "\n",
+    "<p>the nginx configuration file should look like this</p>\n",
+    "\n",
+    "```bash\n",
+    "sudo nano /etc/nginx/sites-available/myproject\n",
+    "```\n",
+    "\n",
+    "<pre>\n",
+    "<code>\n",
+    "server {\n",
+    "    listen 80;\n",
+    "    server_name kshyst.ir;\n",
+    "\n",
+    "    location / {\n",
+    "        proxy_pass http://unix:/home/kshyst/Portfolio/MyPortfolio.sock;\n",
+    "        proxy_set_header Host $host;\n",
+    "        proxy_set_header X-Real-IP $remote_addr;\n",
+    "        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;\n",
+    "        proxy_set_header X-Forwarded-Proto $scheme;\n",
+    "    }\n",
+    "\n",
+    "    location /static/ {\n",
+    "        alias /home/kshyst/Portfolio/static/;\n",
+    "    }\n",
+    "\n",
+    "    location /media/ {\n",
+    "        alias /home/kshyst/Portfolio/media/;\n",
+    "    }\n",
+    "\n",
+    "    # Redirect all HTTP requests to HTTPS\n",
+    "    if ($scheme != \"https\") {\n",
+    "        return 301 https://$host$request_uri;\n",
+    "    }\n",
+    "}\n",
+    "\n",
+    "server {\n",
+    "    listen 443 ssl;\n",
+    "    server_name kshyst.ir;\n",
+    "\n",
+    "    ssl_certificate /etc/letsencrypt/live/kshyst.ir/fullchain.pem;\n",
+    "    ssl_certificate_key /etc/letsencrypt/live/kshyst.ir/privkey.pem;\n",
+    "    include /etc/letsencrypt/options-ssl-nginx.conf;\n",
+    "    ssl_dhparam /etc/letsencrypt/ssl-dhparams.pem;\n",
+    "\n",
+    "    location / {\n",
+    "        proxy_pass http://unix:/home/kshyst/Portfolio/MyPortfolio.sock;\n",
+    "        proxy_set_header Host $host;\n",
+    "        proxy_set_header X-Real-IP $remote_addr;\n",
+    "        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;\n",
+    "        proxy_set_header X-Forwarded-Proto $scheme;\n",
+    "    }\n",
+    "\n",
+    "    location /static/ {\n",
+    "        alias /home/kshyst/Portfolio/static/;\n",
+    "    }\n",
+    "\n",
+    "    location /media/ {\n",
+    "        alias /home/kshyst/Portfolio/media/;\n",
+    "    }\n",
+    "}\n",
+    "\n",
+    "</code>\n",
+    "</pre>\n",
+    "\n",
+    "<p>now restart nginx to check if it works</p>\n",
+    "\n",
+    "```bash\n",
+    "sudo systemctl start nginx\n",
+    "\n",
+    "```"
+   ],
+   "id": "1b6c000600b67f1b"
   }
  ],
  "metadata": {
