--- a/DeploymentWithNginx.ipynb
+++ b/DeploymentWithNginx.ipynb
@@ -361,10 +361,74 @@
     "\n",
     "```bash\n",
     "sudo systemctl start nginx\n",
-    "\n",
-    "```"
+    "```\n"
    ],
    "id": "1b6c000600b67f1b"
+  },
+  {
+   "metadata": {},
+   "cell_type": "markdown",
+   "source": [
+    "<h3>Setup Postgresql</h3>\n",
+    "\n",
+    "<p>download dependencies</p>\n",
+    "\n",
+    "```bash\n",
+    "sudo apt update\n",
+    "sudo apt install postgresql postgresql-contrib\n",
+    "sudo apt install libpq-dev\n",
+    "```\n",
+    "\n",
+    "<p>activate virtual environment and install psycopg2</p>\n",
+    "\n",
+    "```bash\n",
+    "source /path/to/your/venv/bin/activate\n",
+    "pip install psycopg2-binary\n",
+    "```\n",
+    "\n",
+    "<p>Create a PostgreSQL Database and User</p>\n",
+    "\n",
+    "```bash\n",
+    "sudo -i -u postgres\n",
+    "psql\n",
+    "```\n",
+    "\n",
+    "<pre>\n",
+    "CREATE DATABASE mydatabase;\n",
+    "CREATE USER myuser WITH PASSWORD 'mypassword';\n",
+    "ALTER ROLE myuser SET client_encoding TO 'utf8';\n",
+    "ALTER ROLE myuser SET default_transaction_isolation TO 'read committed';\n",
+    "ALTER ROLE myuser SET timezone TO 'UTC';\n",
+    "GRANT ALL PRIVILEGES ON DATABASE mydatabase TO myuser;\n",
+    "\\q\n",
+    "exit\n",
+    "</pre>\n",
+    "\n",
+    "<p>update django's settings.py</p>\n",
+    "\n",
+    "<pre>\n",
+    "<code>\n",
+    "DATABASES = {\n",
+    "    'default': {\n",
+    "        'ENGINE': 'django.db.backends.postgresql',\n",
+    "        'NAME': 'mydatabase',\n",
+    "        'USER': 'myuser',\n",
+    "        'PASSWORD': 'mypassword',\n",
+    "        'HOST': 'localhost',\n",
+    "        'PORT': '5432',\n",
+    "    }\n",
+    "}\n",
+    "</code>\n",
+    "</pre>\n",
+    "\n"
+   ],
+   "id": "4d9d8f10009a936f"
+  },
+  {
+   "metadata": {},
+   "cell_type": "markdown",
+   "source": "",
+   "id": "aa32a814113f1b62"
   }
  ],
  "metadata": {
