--- a/DeploymentWithNginx.ipynb
+++ b/DeploymentWithNginx.ipynb
@@ -420,6 +420,23 @@
     "}\n",
     "</code>\n",
     "</pre>\n",
+    "\n",
+    "\n",
+    "\n",
+    "<h3>Migrate the Database</h3>\n",
+    "\n",
+    "```bash\n",
+    "python3 manage.py makemigrations\n",
+    "python3 manage.py migrate\n",
+    "```\n",
+    "\n",
+    "<p>restart everything</p>\n",
+    "\n",
+    "```bash\n",
+    "sudo systemctl daemon-reload\n",
+    "sudo systemctl restart myproject\n",
+    "sudo systemctl restart nginx\n",
+    "```\n",
     "\n"
    ],
    "id": "4d9d8f10009a936f"
