few things added

--- a/DeploymentWithNginx.ipynb
+++ b/DeploymentWithNginx.ipynb
@@ -18,6 +18,12 @@
     "```bash\n",
     "sudo systemctl status nginx\n",
     "sudo nginx -t\n",
+    "sudo tail -f /var/log/nginx/error.log\n",
+    "```\n",
+    "\n",
+    "<p>check gunicorn</p>\n",
+    "```bash\n",
+    "sudo systemctl status myproject\n",
     "```\n",
     "\n"
    ],
