few things added

--- a/DeploymentWithNginx.ipynb
+++ b/DeploymentWithNginx.ipynb
@@ -450,8 +450,38 @@
   {
    "metadata": {},
    "cell_type": "markdown",
-   "source": "",
+   "source": [
+    "<h3>Migrate from sqlite to postgresql</h3>\n",
+    "\n",
+    "<p>dump data into json</p>\n",
+    "\n",
+    "```bash\n",
+    "python3 manage.py dumpdata > db.json\n",
+    "```\n",
+    "\n",
+    "<p>then switch data base and load it</p>\n",
+    "\n",
+    "```bash\n",
+    "python manage.py makemigrations\n",
+    "python manage.py migrate\n",
+    "python manage.py loaddata db.json\n",
+    "```\n",
+    "\n",
+    "<p>then restart everything</p>\n",
+    "\n",
+    "```bash\n",
+    "sudo systemctl daemon-reload\n",
+    "sudo systemctl restart myproject\n",
+    "sudo systemctl restart nginx\n",
+    "```"
+   ],
    "id": "aa32a814113f1b62"
+  },
+  {
+   "metadata": {},
+   "cell_type": "markdown",
+   "source": "",
+   "id": "1ab3575233497212"
   }
  ],
  "metadata": {
