added some testing commands to nginx

--- a/DeploymentWithNginx.ipynb
+++ b/DeploymentWithNginx.ipynb
@@ -22,10 +22,48 @@
     "```\n",
     "\n",
     "<p>check gunicorn</p>\n",
+    "\n",
     "```bash\n",
     "sudo systemctl status myproject\n",
     "```\n",
-    "\n"
+    "\n",
+    "<p>check postgreSQL</p>\n",
+    "\n",
+    "```bash\n",
+    "sudo systemctl status postgresql\n",
+    "```\n",
+    "\n",
+    "<p>check bind9</p>\n",
+    "\n",
+    "```bash\n",
+    "sudo systemctl status bind9\n",
+    "```\n",
+    "\n",
+    "<p>check cerbot</p>\n",
+    "    \n",
+    "```bash\n",
+    "    sudo certbot certificates\n",
+    "```\n",
+    "\n",
+    "<p>check system task manager</p>\n",
+    "\n",
+    "```bash\n",
+    "  htop\n",
+    "```\n",
+    "\n",
+    "<p>Check Gunicorn socket</p>\n",
+    "\n",
+    "```bash\n",
+    "sudo ls -l /home/kshyst/Portfolio/MyPortfolio.sock\n",
+    "```\n",
+    "\n",
+    "<p>Test Gunicorn with fake socket</p>\n",
+    "\n",
+    "```bash\n",
+    "source /home/kshyst/Portfolio/venv/bin/activate\n",
+    "cd /home/kshyst/Portfolio\n",
+    "gunicorn --workers 3 --bind unix:/home/kshyst/Portfolio/MyPortfolio.sock MyPortfolio.wsgi:application\n",
+    "```"
    ],
    "id": "85b5f7b7827a24e3"
   },
