--- a/Telegram Bot/TelegramBot.ipynb
+++ b/Telegram Bot/TelegramBot.ipynb
@@ -11,6 +11,7 @@
     "```bash\n",
     "pip install python-telegram-bot\n",
     "pip install \"python-telegram-bot[job-queue]\"\n",
+    "pip install requests\n",
     "```\n",
     "\n"
    ],
