Mongo db usage added

--- a/Telegram Bot/TelegramBot.ipynb
+++ b/Telegram Bot/TelegramBot.ipynb
@@ -83,8 +83,39 @@
   {
    "metadata": {},
    "cell_type": "markdown",
-   "source": "",
+   "source": [
+    "<h3>MongoDB</h3>\n",
+    "\n",
+    "<p>start a mongodb docker container</p>\n",
+    "\n",
+    "```bash\n",
+    "docker pull mongo:7.0.2\n",
+    "docker run -d --name some-mongo -p 27017:27017 mongo:7.0.2\n",
+    "docker exec -it some-mongo bash\n",
+    "```\n",
+    "\n",
+    "<p>inside the container</p>\n",
+    "\n",
+    "```bash\n",
+    "mongosh\n",
+    "```\n",
+    "\n",
+    "<p>use mongodb compass gui app to see data bases (optional)</p>\n",
+    "\n",
+    "<p>install python dependencies</p>\n",
+    "\n",
+    "```bash\n",
+    "pip install pymongo\n",
+    "```\n",
+    "\n"
+   ],
    "id": "b9f02e8e4e94929d"
+  },
+  {
+   "metadata": {},
+   "cell_type": "markdown",
+   "source": "",
+   "id": "561ec93da7ba181c"
   }
  ],
  "metadata": {
